# TheGraphicsEngine

./: CMakeLists.txt  CMakeSettings.json  Entity.cpp  README.md
cmake/: FindFREETYPE.cmake  FindIRRKLANG.cmake
headers/chunk/: Block.h  Chunk.h  ChunkBuilder.h  ChunkController.h  ChunkGenerator.h  MeshBuilder.h
headers/chunk/terrain-generation/: PerlinNoise.h  TerrainNoise.h  TreeGeneration.h
headers/controls/: Camera.h  LineTrace.h
headers/default/: Window.h
headers/entities/: IndexedMesh.h  Line.h  Mesh.h
headers/rendering/: IndexBuffer.h  MeshBuffer.h  RenderInformation.h  VertexArray.h  VertexBuffer.h
headers/texturing/: ITexture.h  TextureCoords.h  TextureInfo.h  TextureMap.h
headers/world/: Constants.h  World.h  WorldUtils.h
include/concurrentMap/: SynchronizedMap.h
include/glad/: glad.h
include/perlinNoise/: PerlinNoise.hpp
lib/: assimp.lib  freetype.lib  glfw3.lib
shaders/: HudShader.frag  HudShader.vert  LightSourceShader.vert  LightingShader.frag  LightingShader.vert  LineShader.vert  WaterTexture.frag
src/: Source.cpp  TheGraphicsEngine - Shortcut.lnk
src/chunk/: Block.cpp  Block.h  Chunk.cpp  ChunkBuilder.cpp  ChunkController.cpp  ChunkController.h  ChunkGenerator.cpp  ChunkLayer.cpp  ChunkLayer.h  MeshBuilder.cpp  MeshBuilder.h
src/chunk/terrain-generation/: PerlinNoise.cpp  TerrainNoise.cpp  TreeGeneration.cpp  TreeGeneration.h
src/collision/: AABBCollision.cpp  AABBCollision.h
src/controls/: AABB.cpp  AABB.h  Camera.h  LineTrace.cpp  LineTrace.h  Player.cpp  Player.h
src/controls/player/: Inventory.cpp  Inventory.h  Player.cpp  Player.h
src/default/: Window.cpp  Window.h
src/entities/: Entity.cpp  Entity.h  IMesh.h  IndexedMesh.cpp  Item.cpp  Item.h  Line.cpp  Mesh.cpp  Mob.cpp  Mob.h
src/entities/collision/: CollisionHandler.cpp  CollisionHandler.h  IEntity.h  PhysicsHandler.cpp  PhysicsHandler.h
src/gui/: ScreenText.cpp  ScreenText.h
src/gui/gui-elements/: InventoryGui.cpp  InventoryGui.h
src/helpers/: RenderDistanceDebug.h.in  RenderDistanceRelease.h.in
src/includes/: VertexArray.h  VertexBuffer.h
src/includes/chunk/: Block.h  Chunk.h
src/includes/entities/: Entity.h  Mesh.h
src/includes/rendering/: RenderInformation.h  VertexArray.h  VertexBuffer.h
src/rendering/: IndexBuffer.cpp  MeshBuffer.cpp  MeshBuffer.h  RenderInformation.h  Shader.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h
src/texturing/: Texture.cpp  TextureCoords.cpp  TextureInfo.cpp  TextureMap.cpp
src/world/: Constants.h  World.cpp  World.h  WorldUtils.cpp  WorldUtils.h
src/world/world-rendering/: ItemRenderer.cpp  ItemRenderer.h  Renderer.cpp  Renderer.h  SolidRenderer.cpp  SolidRenderer.h  TransparentRenderer.cpp  TransparentRenderer.h
